# toy-lang

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  CMakeLists.txt  CPPLINT.cfg  Gemini_command.md  README.md  test.toy  test_print.toy
benchmarks/: CMakeLists.txt  bench_main.cpp
docs/: compilation.md
include/toy/: AST.h  Lexer.h  MLIRGen.h  Parser.h
scripts/: gemini_push.py  generate_log.py  pre-commit
src/: CMakeLists.txt  main.cpp
src/frontend/: Lexer.cpp  Parser.cpp
src/mlir/: MLIRGen.cpp
tests/: CMakeLists.txt  TypeCheckerTest.cpp  test_main.cpp
